--- a/src/style.css
+++ b/src/style.css
@@ -22,9 +22,17 @@
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 20px;
 }
+
+.richText__img-box {
+  width: 100%;
+  margin-top: 24px;
+  height: 400px;
+}
+
 .richText__img {
+  display: block;
 	width: 100%;
-	margin-top: 24px;
+	height: 100%;
 	object-fit: cover;
 }
 
