--- a/src/style.css
+++ b/src/style.css
@@ -1,26 +1,27 @@
 .richText {
-	margin: auto;
-	max-width: 600px;
-	height: 100vh;
+  margin: auto;
+  max-width: 600px;
+  height: 100vh;
+  overflow: hidden;
 }
 .richText__title {
-	font-size: 48px;
-	line-height: 1.2;
-	font-family: Arial, Helvetica, sans-serif;
-	color: #262626;
+  font-size: 48px;
+  line-height: 1.2;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #262626;
 }
 .richText__separator {
-	width: 100%;
-	height: 2px;
-	background-color: #454545;
-	margin-top: 24px;
+  width: 100%;
+  height: 2px;
+  background-color: #454545;
+  margin-top: 24px;
 }
 .rishText__subtitle {
-	margin-top: 24px;
-	color: #555;
-	line-height: 1.2;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 20px;
+  margin-top: 24px;
+  color: #555;
+  line-height: 1.2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
 }
 
 .richText__img-box {
@@ -31,37 +32,37 @@
 
 .richText__img {
   display: block;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .richText__buttons {
-	position: absolute;
-	left: 64px;
-	top: 64px;
-	display: flex;
-	flex-direction: column;
-	row-gap: 16px;
+  position: absolute;
+  left: 64px;
+  top: 64px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
 }
 
 .richText__button {
-	background: transparent;
-	background-color: #2b2b2b;
-	color: white;
-	border: 2px solid #2b2b2b;
-	transition: all .3s ease;
-	cursor: pointer;
-	padding: 16px 32px;
-	font-size: 16px;
-	font-family: Arial, Helvetica, sans-serif;
+  background: transparent;
+  background-color: #2b2b2b;
+  color: white;
+  border: 2px solid #2b2b2b;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  padding: 16px 32px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .richText__button:hover {
-	color: #2b2b2b;
-	background-color: white;
+  color: #2b2b2b;
+  background-color: white;
 }
 
 .fade-in {
-	visibility: 0;
+  visibility: 0;
 }
