--- a/src/style.css
+++ b/src/style.css
@@ -66,3 +66,17 @@
 .fade-in {
   visibility: 0;
 }
+
+.display-trouble {
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 100vh;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+}
+.display-trouble__text {
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
